2008-05-19  Tor Lillqvist  <tml@novell.com>

	* win32/dirent/dirent.c: Include dirent.h with doublequotes so
	that it is searched from this same folder first.

2008-05-19  Tor Lillqvist  <tml@novell.com>

	* win32/vs8/gspawn-win32-helper.vcproj
	* win32/vs8/gspawn-win32-helper-console.vcproj: New files. Build
	these two executables.

	* win32/vs8/*.vcproj: Compile as C and not C++.

	* win32/vs8/glib-genmarshal.vcproj: Use MBS and not Unicode. (What
	this setting really means is just that we don't define the UNICODE
	and _UNICODE macros when compiling; it has no effect on what APIs
	the code might use.) Use the same IntermediateDirectory as the
	other projects.

	* win32/vs8/glib.sln: Add the gspawn-win32-helper and gspawn-win32-helper projects.

2008-05-17  Tor Lillqvist  <tml@novell.com>

	* "build" is no longer include into GLib through
	svn:externals. The relevant directories and files have been svn
	add'ed to GLib (trunk) instead.

2008-05-16  Tor Lillqvist  <tml@novell.com>

	* win32/vs8/glib.vcproj: Add gi18n.c.

	* win32/vs8/gio.vcproj: Add gwin32directorymonitor.c.

	* win32/vs8/glib-genmarshal.vcproj: Put also glib-genmarshal.exe
	in the "bin" folder.

2008-04-23  Tor Lillqvist  <tml@novell.com>

	Bug 529391 - Update of vs8 build files for Glib 2.16

	* win32/vs8/*: Update from Danel Atallah.

2008-03-12  Tor Lillqvist  <tml@novell.com>

	* MAINTAINERS: Add.

	* win32/make.mingw: Remove this since long unused and obsolete
	file from SVN.

	* win32/make.msc: Don't mention it here either then.

2007-04-15  Tor Lillqvist  <tml@novell.com>

	* .cvsignore
	* win32/.cvsignore
	* win32/dirent/.cvsignore
	* win32/vs8/.cvsignore: Remove.

2006-10-14  Tor Lillqvist  <tml@novell.com>

	* win32/vs8/gmodule.vcproj
	* win32/vs8/gobject.vcproj
	* win32/vs8/gthread.vcproj: Updates by Mike Edenfield. (#354124)

2006-09-02  Tor Lillqvist  <tml@novell.com>

	* win32/vs8/glib.vcproj: Update from Mike Edenfield.

2006-02-08  Tor Lillqvist  <tml@novell.com>
