@@ -25,6 +25,12 @@ struct dirent
 	char		d_name[FILENAME_MAX]; /* File name. */
 };
 
+#ifdef _WIN64
+#define INTPTR __int64
+#else
+#define INTPTR long
+#endif
+
 /*
  * This is an internal data structure. Good programmers will not use it
  * except as an argument to one of the functions below.
@@ -41,7 +47,7 @@ typedef struct
 	struct dirent		dd_dir;
 
 	/* _findnext handle */
-	long			dd_handle;
+	INTPTR			dd_handle;
 
 	/*
          * Status of search:
@@ -88,7 +94,7 @@ typedef struct
 	struct _wdirent		dd_dir;
 
 	/* _findnext handle */
-	long			dd_handle;
+	INTPTR			dd_handle;
 
 	/*
          * Status of search:
